# contacts-mobile

./: .gitignore  AGENTS.md  LICENSE  architecture.md  decisions.md  groundrules.md  mrl-extension.lock.yaml  mrl.lock.yaml  pyproject.toml  readme.md  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build-apk.yml  ci-contacts-mobile-bff.yml  notify-discord-on-issue-close.yml  notify-discord-on-issue-open.yml
app/: build.gradle.kts
contracts/: README.md
contracts/auth/: README.md
contracts/mobile/: README.md
contracts/notifications/: README.md
contracts/offline/: README.md
contracts/runtime/: README.md
contracts/sync/: README.md
contracts/telemetry/: README.md
docs/building/: project_structure.md
docs/operating/: contacts_bff_ci_requirements.md  contacts_bff_runtime_runbook.md  emulator_smoke_test_runbook.md  issue_pr_linking_guidance.md  mrl_reference.md  mrl_starter.md  packs.md  skills_workflow.md
docs/packs/: android_compose_client.md
docs/semantics/: domain_background_knowledge.md  model_hypothesis.md
docs/slices/: README.md  android_contact_detail_api_client.md  android_contact_detail_bff_contract.md  android_contacts_app_bootstrap_single_entry.md  android_contacts_app_bootstrap_verb.md  android_contacts_app_material_3_theme.md  android_contacts_app_preview_font_scale_matrix.md  android_contacts_app_preview_state_matrix.md  android_contacts_app_preview_text_stress_matrix.md  android_contacts_app_preview_theme_matrix.md  (+49 more)
gradle/: libs.versions.toml
server/: Dockerfile  README.md  go.mod  go.sum
(+348 files in other folders)
