[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contacts-mobile"
version = "0.1.0"
description = "Contacts Mobile project shaped with the Model Refinement Lab"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
