[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contacts-mobile"
version = "0.1.0"
description = "Contacts Mobile project shaped with the Model Refinement Lab"
license = { text = "MPL-2.0" }
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
